# BitSparsityArchitectureSimulator

./: .gitignore  CMakeLists.txt
LibSimulator/: BFloatPE.cpp  BFloatPE.h  BFloatPEArray.cpp  BFloatPEArray.h  CMakeLists.txt  CmakeLists.txt  OverAllArch.cpp  OverAllArch.h  PE.cpp  PE.h  PEArray.cpp  PEArray.h  Utils.cpp  Utils.h
Simulator/: CMakeLists.txt  CmakeLists.txt  README.md  easytorch.cpp  easytorchbfloat.cpp  main.cpp  matplotlibcpp.h  performanceTest.cpp  tryApprox.cpp
TestSimulator/: CMakeLists.txt  CMakeLists.txt.in  TestBFloatPEArray.cpp  TestPE.cpp  TestPEArray.cpp  TestUtils.cpp  TestUtils.h
